--- a/style/style.css
+++ b/style/style.css
@@ -143,3 +143,37 @@ div#stemwijzer{
         transform: scale(1.05);
         transition: all 0.3s ease-in-out;
     }
+div#vragen_partijen{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+div#partie_name_container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    padding: 20px 0;
+    box-sizing: border-box;
+}
+    div.partie_name{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: var(--blue);
+        color: var(--white);
+        cursor: pointer;
+    } 
+        .partie_question_container{
+            display: none;
+            width: 100%;
+            padding: 20px;
+            background-color: #EEEE;
+            color: #323232;
+        }
