--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,9 @@
 div#questionScreen{
     display: none;
 }
+div#extraScreen{
+    display: none;
+}
 div#stemwijzer{
     width: 100%;
     height: 100vh;
@@ -37,7 +40,7 @@ div#stemwijzer{
         padding: 50px 20px;
         background-color: var(--white);
         flex-direction: column;
-
+        box-shadow: 0px 0px 50px #000;
     }
         div.stemwijzer_content{
             width: 100%;
@@ -128,7 +131,29 @@ div#stemwijzer{
         .statement_result, .partij_size_result{
             font-size: 20px;
         }
-
+    .extra_container{
+        max-width: 1200px;
+        width: 100%;
+        display: none;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 50px;
+        box-sizing: border-box;
+        background-color: var(--white);
+    }
+        .extra_inner{
+            width: auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+            padding: 10px 0;
+            box-sizing: border-box;
+        }
+            .extra_inner input{
+                margin-right: 10px;
+            }
 .skip{
     width: 300px;
     text-align: center;
@@ -153,8 +178,9 @@ div#vragen_partijen{
 div#partie_name_container{
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     flex-direction: row;
     padding: 20px 0;
     box-sizing: border-box;
@@ -163,12 +189,14 @@ div#partie_name_container{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50px;
+        min-width: 50px;
         height: 50px;
-        border-radius: 50%;
+        padding: 0 10px;
+        border-radius: 25px;
         background-color: var(--blue);
         color: var(--white);
         cursor: pointer;
+        margin: 10px;
     } 
         .partie_question_container{
             display: none;
